--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                         </div>
                         
                         <div class="text-center py-4">
-                            <h4 class="text-primary">Dammika Perera</h4>
+                            <h4 class="text-primary">mr.Dammika Perera</h4>
                             <p class="text-uppercase m-0">Founder</p>
                         </div>
                     </div>
@@ -400,7 +400,7 @@
                             </div>
                         </div>
                         <div class="text-center py-4">
-                            <h4 class="text-primary">Sandunika Wanigarathna</h4>
+                            <h4 class="text-primary">mrs.Sandunika Wanigarathna</h4>
                             <p class="text-uppercase m-0">Manager</p>
                         </div>
                     </div>
@@ -459,7 +459,7 @@
                             </div>
                             <div class="text-center py-4">
                                 <h4 class="text-primary">Stuff 1</h4>
-                                <p class="text-uppercase m-0">Staff</p>
+                                <p class="text-uppercase m-0">ms.Staff</p>
                             </div>
                         </div>    
                     </div>  
@@ -475,7 +475,7 @@
                                 </div>
                             </div>
                             <div class="text-center py-4">
-                                <h4 class="text-primary">Staff2</h4>
+                                <h4 class="text-primary">ms.Staff2</h4>
                                 <p class="text-uppercase m-0">staff</p>
                             </div>
                         </div>
@@ -492,7 +492,7 @@
                                 </div>
                             </div>
                             <div class="text-center py-4">
-                                <h4 class="text-primary">Nipuni</h4>
+                                <h4 class="text-primary">ms.Nipuni Bagya</h4>
                                 <p class="text-uppercase m-0">Staff</p>
                             </div>
                         </div>
