--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3014013413983426"
+     crossorigin="anonymous"></script>
+	
     <meta charset="utf-8">
     <title>DP - Kamburupitiya Center</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
